Ensure Java 11 compatibility